# ai_mentor

./: .gitignore  README.md  chainlit.md  pyproject.toml
ai_mentor/: main.py
data/: Generative AI.txt
etl/: main.py
lancedb/vectors.lance/_indices/fts/: .managed.json  meta.json
lancedb/vectors.lance/_transactions/: 0-a94a48b0-8917-4efd-8f54-eab90175841b.txn  1-da075496-442a-4e4d-89ad-7089dcd633f3.txn  2-999c85cf-0892-49fa-a32f-64bfee9de3af.txn  3-69c03133-60ac-49c2-a00a-0bf682eaee80.txn  4-43923b48-b9af-4858-8dc7-3f8debb5d955.txn  5-fe719e05-aa0e-4016-96e3-9f9c744c80e7.txn  6-fc50072c-f2d4-4fcb-ab5c-f0ddb4080b89.txn
lancedb/vectors.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest  7.manifest
lancedb/vectors.lance/data/: 026d618a-b6e9-48dc-a913-445b2e971af7.lance  17256dd9-0c88-4bed-94ce-ac757b5afa1c.lance  5dd82dc2-0b9e-462d-91fa-74aaa50b72cd.lance  64c95fa1-1b3f-4244-93bb-4a2a544f8f53.lance  8d202c20-44b5-4cb4-8e54-c07d173365cd.lance  8e02a4cf-a947-46a6-b085-12c07e275843.lance  d8e78ae4-9185-4651-9cf2-96e46aabc041.lance
new_data/: Project Flow.txt
